# Portfolio-Analysis-Streamlit

./: .gitignore  .replit  ETRADE_SETUP.md  README.md  app.py  main.py  pyproject.toml  replit.md
analytics/: cache.py  data.py  etrade_client.py  models.py  performance.py  portfolio.py  reporting.py  user_input.py
attached_assets/: Pasted--Common-patterns-for-automatic-classification-us-equity-patterns-SPY-QQQ-VTI-V-1760108126305_1760108126307.txt  Pasted--home-runner-workspace-analytics-data-py-7-FutureWarning-YF-download-has-changed-argument-auto-a-1759069247556_1759069247557.txt  Pasted-def-classify-investment-ticker-Classify-investment-into-US-Equities-International-Equities-1760108229387_1760108229388.txt
